added more css design, with boxes and the buttons

--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -41,22 +41,22 @@
 
 
   <div class="digital-design">
+    
     <h2>Digital Design</h2>
 
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-<button>Learn More</button>
+<button class="btn1">Learn More</button>
 
 </div>
-
 <div class="UX-design">
 <h2>UX / UI</h2>
 
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-<button>Learn More</button>
+<button class="btm2">Learn More</button>
 
 </div>
 
@@ -67,7 +67,7 @@ eleifend. Mauris euismod facilisis iaculis.</p>
   <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
   eleifend. Mauris euismod facilisis iaculis.</p>
   
-  <button>Learn More</button>
+  <button class="btn3">Learn More</button>
 
 </div>
 
@@ -77,7 +77,7 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-<button>Learn More</button>
+<button class="btn4">Learn More</button>
 </div>
 
 <div class="ios-dev">
@@ -86,7 +86,7 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-<button>Learn More</button>
+<button class="btn5">Learn More</button>
 </div>
 
 
@@ -97,7 +97,7 @@ eleifend. Mauris euismod facilisis iaculis.</p>
   <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
   eleifend. Mauris euismod facilisis iaculis.</p>
   
-  <button>Learn More</button>
+  <button class="btn6">Learn More</button>
 
 </div>
 
@@ -107,17 +107,27 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 
 
 
-<section class="service-facts">
+<section class="ending-content">
+
+
+<div class="service-facts">
+
 <h2>Some Facts About Our Services</h2>
 
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
+</div>
+
 <div class="list">
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
+  <ul>
+    <li>Awesome thing</li>
+    <li>Amazing thing</li>
+    <li>Cool thing</li>
+    <li>Great thing</li>
+  </ul>
+
+    
 </div>
 
 <div class="picture">
