--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -26,7 +26,12 @@
   About
   Contact
   
-  <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+
+  <span class="brand-logo">
+    <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+
+  </span>
+  
   </div>
   
     
@@ -120,24 +125,18 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-</div>
-
-
-
-<div class="list">
-
+<br>
     <li>Awesome thing</li>
     <li>Amazing thing</li>
     <li>Cool thing</li>
     <li>Great thing</li>
- 
+</br>
     </div>
 
        
 
 <div class="picture">
 <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-  
 </div>
 
 </section>
